<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <View
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/dark_gray"
            android:visibility="invisible" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_bar_layout"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"


        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/blue"
            android:clickable="true"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:text="搜索"
            android:textColor="@color/white"
            android:textSize="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_search"
            android:layout_toStartOf="@+id/btn_search"
            android:background="@drawable/bg_border"
            android:clickable="true"
            android:gravity="center_vertical" >


            <EditText
                android:id="@+id/input_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@mipmap/search_input"
                android:background="@color/transparent"
                android:hint="请输入搜索关键字"
                android:textColorHint="@color/dark_gray"
                android:singleLine="true"
                android:textColor="@color/gary"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/start_trace"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="center"
        android:background="@drawable/start_trace"
        android:text="@string/start_trace"
        android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="150dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:background="@drawable/review"
            android:text="@string/review"
            android:textColor="@color/white"
            android:visibility="invisible"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:background="@drawable/share"
            android:text="@string/share"
            android:textColor="@color/white"
            android:visibility="invisible"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/poi_detail"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_border"
        android:visibility="gone">

        <TextView
            android:id="@+id/poi_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="#5566b8"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/poi_address"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/poi_name"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/poi_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/poi_address"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:textColor="#333333"
            android:textSize="12sp" />
    </RelativeLayout>

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:itemIconTint="@drawable/color_select"-->
        <!--app:itemTextColor="@drawable/color_select"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--app:menu="@menu/navigation" />-->



</RelativeLayout>